<resources>
    <string name="app_name">MediMeApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="no_medime_fragment_label">I don\'t have MediMe</string>
    <string name="no_medime_title">I don\'t have MediMe</string>
    <string name="no_medime_message">You can get MediMe from your pharmacy or healthcare provider to start tracking your medications.</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="add">Add</string>
    <string name="change">Change</string>
    <string name="dialog_add_hint">Add something for this date.</string>
    <string name="dialog_add_name">Name:</string>
    <string name="dialog_add_name_hint">you can type here</string>
    <string name="dialog_add_time">Every:</string>
    <string name="dialog_add_till_when">Till when:</string>
    <string name="dialog_add_color">Color:</string>
    <string name="medications_on_date">Medications on this date</string>

    <string-array name="dialog_time_options">
        <item>Once daily</item>
        <item>Twice daily</item>
        <item>3 times daily</item>
        <item>4 times daily</item>
        <item>Every 4 hours</item>
        <item>Every 6 hours</item>
        <item>Every 8 hours</item>
        <item>Every 12 hours</item>
        <item>Every other day</item>
        <item>Once a week</item>
        <item>Once a month</item>
        <item>As needed</item>
    </string-array>
    <string-array name="dialog_till_when_options">
        <item>1 week</item>
        <item>2 weeks</item>
        <item>1 month</item>
        <item>3 months</item>
        <item>6 months</item>
        <item>1 year</item>
        <item>Ongoing</item>
    </string-array>
    <string-array name="dialog_color_options">
        <item>Red</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Yellow</item>
        <item>Orange</item>
        <item>Purple</item>
        <item>Pink</item>
        <item>Teal</item>
    </string-array>

    <string name="action_ble_relay">BLE Relay</string>
    <string name="action_spp_relay">Bluetooth Relay</string>
    <string name="spp_relay_status_disconnected">Status: Disconnected</string>
    <string name="spp_relay_status_connected">Status: Connected to MediMe</string>
    <string name="spp_relay_status_connecting">Status: Connecting…</string>
    <string name="spp_relay_connect">Connect to MediMe</string>
    <string name="spp_relay_pair_hint">Pair MediMe in Settings → Bluetooth first, then connect here.</string>
    <string name="spp_relay_relay1_on">Relay 1 ON</string>
    <string name="spp_relay_relay1_off">Relay 1 OFF</string>
    <string name="spp_relay_rotate">Rotate</string>
    <string name="ble_relay_status_disconnected">Status: Disconnected</string>
    <string name="ble_relay_status_connected">Status: Connected to MediMe</string>
    <string name="ble_relay_status_connecting">Status: Connecting…</string>
    <string name="ble_relay_status_scanning">Status: Scanning…</string>
    <string name="ble_relay_hint_use_app">Connect here with the button below. Do not use Android Settings → Bluetooth to connect.</string>
    <string name="ble_relay_scan_connect">Scan and connect to MediMe</string>
    <string name="ble_relay_relay1_on">Relay 1 ON</string>
    <string name="ble_relay_relay1_off">Relay 1 OFF</string>

    <string name="dropdown_hint">How often?</string>
    <string-array name="dropdown_options">
        <item>Every 2 hours</item>
        <item>Every 3 hours</item>
        <item>Every 4 hours</item>
        <item>Every 6 hours</item>
        <item>Every 8 hours</item>
        <item>Every 12 hours</item>
        <item>Once daily</item>
        <item>Twice daily</item>
        <item>Three times daily</item>
        <item>Every other day</item>
        <item>Once a week</item>
        <item>Every 2 weeks</item>
        <item>Once a month</item>
    </string-array>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>